# nitro_camera

./: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  build.yaml  ffigen.yaml  pubspec.yaml  skills-lock.json
.claude/skills/: patrol-test-architecture  patrol-write-test
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/integration_test/: api_surface_test.dart  camera_lifecycle_test.dart  capture_latency_test.dart  resolution_4k_test.dart
example/integration_test/support/: harness.dart  reset_permissions.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: camera_preview_widget.dart  camera_state.dart  main.dart  repro_main.dart
example/lib/widgets/: bottom_controls.dart  camera_header.dart  camera_status_widgets.dart  control_panel.dart  (+3 more)
example/patrol_test/: test_app.dart  test_bundle.dart
example/src/: CMakeLists.txt  dart_api_dl.c
example/test/: patrol_descriptions_test.dart
ios/: Package.swift  nitro_camera.podspec
ios/Classes/: CameraDeviceInfo.swift  CameraError.swift  CameraSession.swift  ConstraintResolver.swift  FrameOutput.swift  NitraCameraSession.swift  NitraDetectors.swift  NitroCameraImpl.swift  OrientationManager.swift  PhotoOutput.swift  SwiftNitroCameraPlugin.swift  VideoRecorder.swift  nitro_camera.bridge.g.h  nitro_camera.bridge.g.mm  nitro_camera.bridge.g.swift  nitro_camera.c  nitro_camera.cpp
ios/nitro_camera/: Package.swift
lib/: debug.dart  native.dart  nitro_camera.dart  nitro_camera_bindings_generated.dart
lib/src/: camera_controller.dart  camera_device.dart  camera_preview.dart  nitro_camera.g.dart  nitro_camera.native.dart
macos/Classes/: NitroCameraPlugin.swift  nitro_camera.bridge.g.swift
macos/nitro_camera/: Package.swift
src/: CMakeLists.txt  dart_api_dl.c  nitro_camera.c  nitro_camera.cpp
test/: camera_configuration_test.dart  camera_device_parse_test.dart  camera_event_test.dart  camera_exception_test.dart  detection_parse_test.dart  device_selector_test.dart  format_resolver_test.dart  frame_processor_plugin_test.dart  frame_processor_test.dart  readme_api_check_test.dart  recording_result_test.dart
test/scanner/: confirmer_mapping_test.dart  postal_decoders_test.dart  qr_roundtrip_test.dart  telepen_pharma_test.dart  width_decoders_test.dart
(+208 files in other folders)
